force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/API_ID__c.field-meta.xml
<CustomField>
    <fullName>API_ID__c</fullName>
    <description>Captures API From GetFeedback</description>
    <label>API ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>