force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Boat_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Boat_Specialist__c</fullName>
    <label>Boat Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>