force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Boat_Specialist_Manager__c.field-meta.xml
<CustomField>
    <fullName>Boat_Specialist_Manager__c</fullName>
    <formula>Boat_SpecialistId__r.ManagerId</formula>
    <label>Boat Specialist Manager</label>
    <type>Text</type>
</CustomField>