force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/BoatSpecialist_Manager__c.field-meta.xml
<CustomField>
    <fullName>BoatSpecialist_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BoatSpecialist Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GetFeedback_Survey_Responses2</relationshipName>
    <type>Lookup</type>
</CustomField>