force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Dealer_Account__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GetFeedback Survey Responses (Dealer Account)</relationshipLabel>
    <relationshipName>GetFeedback_Survey_Responses1</relationshipName>
    <type>Lookup</type>
</CustomField>