force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <length>254</length>
    <type>Text</type>
</CustomField>