force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/DSM__c.field-meta.xml
<CustomField>
    <fullName>DSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GetFeedback_Dealer_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>