force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/How_can_we_improve_post_season_services__c.field-meta.xml
<CustomField>
    <fullName>How_can_we_improve_post_season_services__c</fullName>
    <label>How can we improve post season services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>