force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Improvements__c.field-meta.xml
<CustomField>
    <fullName>Improvements__c</fullName>
    <label>Improvements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>