force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Lead_Survey_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Survey_Score__c</fullName>
    <label>Lead Survey Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>