force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Learn_more_about_LB_Full_Care_Packages__c.field-meta.xml
<CustomField>
    <fullName>Learn_more_about_LB_Full_Care_Packages__c</fullName>
    <label>Learn more about LB Full Care Packages</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>