force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Plans_for_storing_boat__c.field-meta.xml
<CustomField>
    <fullName>Plans_for_storing_boat__c</fullName>
    <label>Plans for storing boat</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>