force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Price_paid_for_storage__c.field-meta.xml
<CustomField>
    <fullName>Price_paid_for_storage__c</fullName>
    <label>Price paid for storage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>