force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Reason_for_not_servicing_at_Legend__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_not_servicing_at_Legend__c</fullName>
    <label>Reason for not servicing at Legend</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>