force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Related_to_Lead__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>GetFeedback Survey Responses</relationshipLabel>
    <relationshipName>GetFeedback_Dealer_Survey</relationshipName>
    <type>Lookup</type>
</CustomField>