force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <label>Salesperson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>