force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Salesperson_Manager__c.field-meta.xml
<CustomField>
    <fullName>Salesperson_Manager__c</fullName>
    <formula>SalespersonId__r.ManagerId</formula>
    <label>Salesperson Manager</label>
    <type>Text</type>
</CustomField>