force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/SalespersonId__c.field-meta.xml
<CustomField>
    <fullName>SalespersonId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SalespersonId</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GetFeedback_Survey_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>