force-app/main/default/objects/GetFeedback_Survey_Response__c/fields/Where_do_you_purchase_supplies__c.field-meta.xml
<CustomField>
    <fullName>Where_do_you_purchase_supplies__c</fullName>
    <label>Where do you purchase supplies</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>