force-app/main/default/objects/GetFeedback_Survey_Response__c/recordTypes/Dealer_Survey.recordType-meta.xml
<RecordType>
    <fullName>Dealer_Survey</fullName>
    <active>true</active>
    <label>Dealer Survey</label>
</RecordType>