force-app/main/default/objects/GetFeedback_Survey_Response__c/recordTypes/Internal_Survey.recordType-meta.xml
<RecordType>
    <fullName>Internal_Survey</fullName>
    <active>true</active>
    <label>Internal Survey</label>
</RecordType>