force-app/main/default/objects/GetFeedback_Survey_Response__c/recordTypes/Post_Season.recordType-meta.xml
<RecordType>
    <fullName>Post_Season</fullName>
    <active>true</active>
    <description>Post Season Follow Up Surveys</description>
    <label>Post Season</label>
</RecordType>